# basis

./: .gitignore  .ocamlformat  CLAUDE.md  basis.opam  dune-project
lib/: AAA_prelude.ml  ARRAY_SLICE_sig.ml  ARRAY_sig.ml  ARRAY_sig.ml~  Array.ml  ArraySlice.ml  BOOL_sig.ml  BYTE_sig.ml  Basis.ml  BinIO.ml  Bool.ml  Byte.ml  CHAR_sig.ml  COMMAND_LINE_sig.ml  Char.ml  CharArray.ml  CharArraySlice.ml  CharVector.ml  CharVectorSlice.ml  CommandLine.ml  Date.ml  GENERAL_sig.ml  General.ml  General.mli  IEEEReal.ml  IEEE_REAL_sig.ml  IMPERATIVE_IO_sig.ml  INTEGER_sig.ml  IO.ml  IO_sig.ml  Int.ml  LIST_PAIR_sig.ml  LIST_sig.ml  LargeInt.ml  LargeReal.ml  LargeWord.ml  List.ml  ListPair.ml  MATH_sig.ml  MONO_ARRAY_SLICE_sig.ml  (+53 more)
lib/runtime/: dune
