(library
 (name basis)
 (public_name basis)
 (flags
  (:standard -w -A))
 (modules
  Array
  ArraySlice
  Basis
  Bool
  Byte
  Char
  CharArray
  CharArraySlice
  CharVector
  CharVectorSlice
  CommandLine
  exceptions
  General
  IEEEReal
  IMPERATIVE_IO_sig
  infix
  Int
  IO
  LargeInt
  LargeReal
  LargeWord
  List
  ListPair
  Math
  MONO_ARRAY_sig
  MONO_ARRAY_SLICE_sig
  MONO_VECTOR_sig
  MONO_VECTOR_SLICE_sig
  Option
  OS
  OS_FileSys
  OS_Path
  OS_Process
  Position
  Real
  STREAM_IO_sig
  String
  StringCvt
  Substring
  Text
  TextIO
  TEXT_STREAM_IO_sig
  types
  values
  Vector
  VectorSlice
  Word
  Word8
  Word8Array
  Word8ArraySlice
  Word8Vector
  Word8VectorSlice
  Toplevel))
